@@ -42,7 +42,7 @@ public:
 
 	void loop(float timeStep);
 
-	bool keyPressEvent(SDLKey key);
+	bool keyReleaseEvent(SDLKey key);
 
 	void back();
 	void general();
